force-app/main/default/objects/Patient_Intake__c/Patient_Intake__c.object-meta.xml
<CustomObject>
<description>Patient intake and screening capture.</description>
<label>Patient Intake</label>
<nameField>
<displayFormat>PI-{000000}</displayFormat>
<label>Patient Intake Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Patient Intakes</pluralLabel>
<sharingModel>Private</sharingModel>
</CustomObject>