force-app/main/default/objects/Patient_Intake__c/fields/Adherence_Response__c.field-meta.xml
<CustomField>
    <fullName>Adherence_Response__c</fullName>
    <label>Adherence Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Need help</fullName>
            </value>
            <value>
                <fullName>No reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>