force-app/main/default/objects/Patient_Intake__c/fields/CGM_Comfort__c.field-meta.xml
<CustomField>
    <fullName>CGM_Comfort__c</fullName>
    <label>CGM Comfort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comfortable</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Afraid of needle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>