force-app/main/default/objects/Patient_Intake__c/fields/Complications__c.field-meta.xml
<CustomField>
    <fullName>Complications__c</fullName>
    <label>Complications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Kidney</fullName>
            </value>
            <value>
                <fullName>Eyes</fullName>
            </value>
            <value>
                <fullName>Nerves/feet</fullName>
            </value>
            <value>
                <fullName>Heart</fullName>
            </value>
            <value>
                <fullName>Foot ulcer/wound</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>