force-app/main/default/objects/Patient_Intake__c/fields/Diabetes_Type__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Type__c</fullName>
    <label>Diabetes Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Gestational</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>