force-app/main/default/objects/Patient_Intake__c/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <label>Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Doctor review</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Not suitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>