force-app/main/default/objects/Patient_Intake__c/fields/Enquiring_For__c.field-meta.xml
<CustomField>
<fullName>Enquiring_For__c</fullName>
<label>Enquiring For</label>
<type>Picklist</type>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Myself</fullName>
<default>true</default>
<label>Myself</label>
</value>
<value>
<fullName>Family</fullName>
</value>
<value>
<fullName>Another patient</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>