force-app/main/default/objects/Patient_Intake__c/fields/HbA1c_Band__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Band__c</fullName>
    <label>HbA1c Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bands from Zco_Clinical_Threshold__mdt + Don't know</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>