force-app/main/default/objects/Patient_Intake__c/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>