force-app/main/default/objects/Patient_Intake__c/fields/Hypo_Episodes__c.field-meta.xml
<CustomField>
    <fullName>Hypo_Episodes__c</fullName>
    <label>Low-sugar Episodes Since Last Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - once</fullName>
            </value>
            <value>
                <fullName>Yes - more than once</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>