force-app/main/default/objects/Patient_Intake__c/fields/Lead__c.field-meta.xml
<CustomField>
<fullName>Lead__c</fullName>
<label>Lead</label>
<type>Lookup</type>
<referenceTo>Lead</referenceTo>
<relationshipLabel>Lead Records</relationshipLabel>
<relationshipName>PatientIntakeLead</relationshipName>
</CustomField>