force-app/main/default/objects/Patient_Intake__c/fields/Lifestyle_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_Rating__c</fullName>
    <label>Lifestyle Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Struggling</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>