force-app/main/default/objects/Patient_Intake__c/fields/Medication_Change_Note__c.field-meta.xml
<CustomField>
    <fullName>Medication_Change_Note__c</fullName>
    <label>Medication Change Note</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>