force-app/main/default/objects/Patient_Intake__c/fields/Medication_Changed__c.field-meta.xml
<CustomField>
    <fullName>Medication_Changed__c</fullName>
    <label>Medication Changed Since Last Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>