force-app/main/default/objects/Patient_Intake__c/fields/New_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>New_Symptoms__c</fullName>
    <label>New Symptoms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>