force-app/main/default/objects/Patient_Intake__c/fields/Patient__c.field-meta.xml
<CustomField>
<fullName>Patient__c</fullName>
<label>Patient</label>
<type>Lookup</type>
<referenceTo>Account</referenceTo>
<relationshipLabel>Patient Records</relationshipLabel>
<relationshipName>PatientIntakePatient</relationshipName>
</CustomField>