force-app/main/default/objects/Patient_Intake__c/fields/Patient_Consent_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Patient_Consent_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Consent Confirmed</label>
    <type>Checkbox</type>
</CustomField>