force-app/main/default/objects/Patient_Intake__c/fields/Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>Payer_Type__c</fullName>
    <label>Payer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Government scheme</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>