force-app/main/default/objects/Patient_Intake__c/fields/Preferred_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Doctor</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Preferred Doctor Records</relationshipLabel>
    <relationshipName>Preferred_Doctor</relationshipName>
    <type>Lookup</type>
</CustomField>