force-app/main/default/objects/Patient_Intake__c/fields/Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy__c</fullName>
    <label>Pregnancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>