force-app/main/default/objects/Patient_Intake__c/fields/Prescription_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescription</label>
    <type>Checkbox</type>
</CustomField>