force-app/main/default/objects/Patient_Intake__c/fields/Readiness__c.field-meta.xml
<CustomField>
    <fullName>Readiness__c</fullName>
    <label>Readiness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>