force-app/main/default/objects/Patient_Intake__c/fields/Readings_Available__c.field-meta.xml
<CustomField>
    <fullName>Readings_Available__c</fullName>
    <label>Readings Available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - will share</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>