force-app/main/default/objects/Patient_Intake__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <label>Reason for Visit</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>