force-app/main/default/objects/Patient_Intake__c/fields/Recent_Severe_Hypo__c.field-meta.xml
<CustomField>
    <fullName>Recent_Severe_Hypo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recent Severe Low</label>
    <type>Checkbox</type>
</CustomField>