force-app/main/default/objects/Patient_Intake__c/fields/Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Report_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Uploaded</label>
    <type>Checkbox</type>
</CustomField>