force-app/main/default/objects/Patient_Intake__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
<fullName>Response_JSON__c</fullName>
<label>Response JSON</label>
<type>LongTextArea</type>
<length>32768</length>
</CustomField>