force-app/main/default/objects/Patient_Intake__c/fields/Rule_Hits__c.field-meta.xml
<CustomField>
    <fullName>Rule_Hits__c</fullName>
    <label>Eligibility Rule Hits</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>