force-app/main/default/objects/Patient_Intake__c/fields/Safety_Flag__c.field-meta.xml
<CustomField>
    <fullName>Safety_Flag__c</fullName>
    <label>Safety Flag</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>