force-app/main/default/objects/Patient_Intake__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
<fullName>Source_Channel__c</fullName>
<label>Source Channel</label>
<type>Picklist</type>
<valueSet>
<valueSetDefinition>
<value>
<fullName>WhatsApp</fullName>
</value>
<value>
<fullName>TeleCMI</fullName>
</value>
<value>
<fullName>Web</fullName>
<default>true</default>
<label>Web</label>
</value>
<value>
<fullName>Referral</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>