force-app/main/default/objects/Patient_Intake__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Draft</fullName>
<default>true</default>
<label>Draft</label>
</value>
<value>
<fullName>Submitted</fullName>
</value>
<value>
<fullName>In Review</fullName>
</value>
<value>
<fullName>Approved</fullName>
</value>
<value>
<fullName>Rejected</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>