force-app/main/default/objects/Patient_Intake__c/fields/Symptom_Note__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Note__c</fullName>
    <label>Symptom Note</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>