force-app/main/default/objects/Patient_Intake__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lifestyle only</fullName>
            </value>
            <value>
                <fullName>Tablets (1-2)</fullName>
            </value>
            <value>
                <fullName>Tablets (3+)</fullName>
            </value>
            <value>
                <fullName>Insulin</fullName>
            </value>
            <value>
                <fullName>GLP-1 injections</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>