force-app/main/default/objects/Patient_Intake__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Soon</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>