force-app/main/default/objects/Patient_Intake__c/fields/Years_Band__c.field-meta.xml
<CustomField>
    <fullName>Years_Band__c</fullName>
    <label>Years Since Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>