force-app/main/default/objects/Patient_Intake__c/PI_Patient_Or_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>PI_Patient_Or_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Patient__c) &amp;&amp; ISBLANK(Lead__c)</errorConditionFormula>
    <errorMessage>Link the intake to a patient or a lead.</errorMessage>
</ValidationRule>